--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<html>
+< link  rel =" таблиця стилів "
+    href =" style.css "/>
+    <html>
     <head>
         <title>BitMarket</title>
-        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
